Add some fixes and improvements
