# src/typescript/coreapis-sdk/models/detection-text.ts
@@ -1,58 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * FastAPI
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * OpenAPI spec version: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by the swagger code generator program.
- * https://github.com/swagger-api/swagger-codegen.git
- * Do not edit the class manually.
- */
-
- /**
- * 
- *
- * @export
- * @interface DetectionText
- */
-export interface DetectionText {
-
-    /**
-     * @type {string}
-     * @memberof DetectionText
-     */
-    id: string;
-
-    /**
-     * @type {string}
-     * @memberof DetectionText
-     */
-    typology: string;
-
-    /**
-     * @type {string}
-     * @memberof DetectionText
-     */
-    method: string;
-
-    /**
-     * @type {string}
-     * @memberof DetectionText
-     */
-    locationAndScoreInstructions: string;
-
-    /**
-     * @type {string}
-     * @memberof DetectionText
-     */
-    bbchInstructions: string;
-
-    /**
-     * @type {number}
-     * @memberof DetectionText
-     */
-    creationTime: number;
-}
