# src/typescript/coreapis-sdk/models/index.ts
@@ -8,9 +8,6 @@ export * from './detection';
 export * from './detection-data';
 export * from './detection-data-payload';
 export * from './detection-mutation-payload';
-export * from './detection-text';
-export * from './detection-text-create-payload';
-export * from './detection-text-update-payload';
 export * from './detection-type';
 export * from './detection-type-create-payload';
 export * from './detection-type-update-payload';
